--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">My Store</a>
+      <a class="navbar-brand" href="#">MELTUS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -661,9 +661,7 @@
               &copy; <a class="text-dark font-weight-semi-bold" href="#">Meltus Web Solutions</a>. All Rights Reserved. Designed
               by Meltus Juma</p>
       </div>
-      <div class="col-md-6 px-xl-0 text-center text-md-right">
-          <img class="img-fluid" src="assets/images/payments.png" alt="">
-      </div>
+      
   </div>
 </div>
 
