--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <div class="container-fluid offer pt-5">
   <div class="row px-xl-5">
       <div class="col-md-6 pb-4" >
-          <div class="position-relative text-center text-md-right text-white mb-2 py-5 px-5" style="background-color: rgb(136, 175, 175);">
+          <div class="position-relative text-center bg-secondary text-md-right text-white mb-2 py-5 px-5">
               <img src="assets/images/offer-1.png" alt="">
               <div class="position-relative" style="z-index: 1;">
                   <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
@@ -245,7 +245,7 @@
           </div>
       </div>
       <div class="col-md-6 pb-4">
-          <div class="position-relative  text-center text-md-left text-white mb-2 py-5 px-5" style="background-color: rgb(136, 175, 175);">
+          <div class="position-relative  text-center text-md-left bg-secondary text-white mb-2 py-5 px-5">
               <img src="assets/images/offer-2.png" alt="">
               <div class="position-relative" style="z-index: 1;">
                   <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
@@ -599,13 +599,13 @@
   </div>
 </div>
 
-<div class="container-fluid  text-dark mt-5 pt-5" style="background-color: rgb(136, 175, 175); text-decoration: none;">
+<div class="container-fluid  text-dark mt-5 pt-5" style="background-color: rgb(206, 214, 214); text-decoration: none;">
   <div class="row px-xl-5 pt-5">
       <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
           <a href="" class="text-decoration-none">
-              <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1">Meltus</span></h1>
+              <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-dark font-weight-bold border border-white px-3 mr-1">Meltus</span></h1>
           </a>
-          <p>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet erat.</p>
+          <p>Feel free to contact me for any front-end web development work.</p>
           <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>Nairobi,Kenya</p>
           <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>jumameltus@gmail.com</p>
           <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+254 797 665 245</p>
