--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <a href="" class="cat-img position-relative overflow-hidden mb-3">
                   <img class="img-fluid" src="assets/images/cat-1.jpg" alt="">
               </a>
-              <h5 class="font-weight-semi-bold m-0">Men's dresses</h5>
+              <h5 class="font-weight-semi-bold m-0">Men's Clothes</h5>
           </div>
       </div>
       <div class="col-lg-4 col-md-6 pb-1">
@@ -190,7 +190,7 @@
               <a href="" class="cat-img position-relative overflow-hidden mb-3">
                   <img class="img-fluid" src="assets/images/cat-2.jpg" alt="">
               </a>
-              <h5 class="font-weight-semi-bold m-0">Women's dresses</h5>
+              <h5 class="font-weight-semi-bold m-0">Women's Clothes</h5>
           </div>
       </div>
       <div class="col-lg-4 col-md-6 pb-1">
@@ -199,7 +199,7 @@
               <a href="" class="cat-img position-relative overflow-hidden mb-3">
                   <img class="img-fluid" src="assets/images/cat-3.jpg" alt="">
               </a>
-              <h5 class="font-weight-semi-bold m-0">Baby's dresses</h5>
+              <h5 class="font-weight-semi-bold m-0">Baby's Clothes</h5>
           </div>
       </div>
       <div class="col-lg-4 col-md-6 pb-1">
@@ -268,9 +268,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-1.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">Stylish Dress</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 2,500</h6><h6 class="text-muted ml-2"><del>Ksh 3,000</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -285,9 +285,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-2.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">Quality Jeans</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 3,000</h6><h6 class="text-muted ml-2"><del>Ksh 3,500</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -302,9 +302,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-3.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">New Style</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 4,500</h6><h6 class="text-muted ml-2"><del>Ksh 5,000</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -319,9 +319,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-4.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">Black Dress</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 800</h6><h6 class="text-muted ml-2"><del>Ksh 1000</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -338,7 +338,7 @@
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                   <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 300</h6><h6 class="text-muted ml-2"><del>Ksh 500</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -353,9 +353,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-6.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">QUality Tuxedo suiit</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 35,000</h6><h6 class="text-muted ml-2"><del>Ksh 40,000</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -370,9 +370,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-7.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">Black Trench Coat</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 1,200</h6><h6 class="text-muted ml-2"><del>Ksh 1,500</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
@@ -387,9 +387,9 @@
                   <img class="img-fluid w-100" src="assets/images/product-8.jpg" alt="">
               </div>
               <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                  <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                  <h6 class="text-truncate mb-3">Stylish Shirt</h6>
                   <div class="d-flex justify-content-center">
-                      <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                      <h6>Ksh 800</h6><h6 class="text-muted ml-2"><del>Ksh 1,000</del></h6>
                   </div>
               </div>
               <div class="card-footer d-flex justify-content-between bg-light border">
